add antd and .babelrc

--- a/src/views/index/style.scss
+++ b/src/views/index/style.scss
@@ -1,5 +1,8 @@
 .container{
     background: pink;
+    .ant-btn-primary{
+        background-color:chocolate !important;
+    }
     .empty{
         height: 30px;
         width: 100%;
