--- a/src/views/demo/style.scss
+++ b/src/views/demo/style.scss
@@ -1,19 +1,8 @@
 .container{
-    background: pink;
-   
+    background: #ebebeb;
     :global{
         .ant-btn-primary{
             background-color:chocolate !important;
         }
-    }
-    .empty{
-        height: 30px;
-        width: 100%;
-        background: red;
-    }
-    .py{
-        height: 30px;
-        width: 100%;
-        background: yellow;
     }
 }
