--- a/src/views/index/style.scss
+++ b/src/views/index/style.scss
@@ -1,19 +1,24 @@
 .container{
-    color: #000;
+    padding: 10px;
     .searchBar{
-        color: #000;
+        padding: 10px;
+        background-color: rgb(245,245,245);
     }
 
     .btnGroup{
-        margin: 10px 0;
-        :global{
-            .ant-btn-primary{
-                margin-right: 10px !important;
-            }
-        }
+        margin: 20px 0;
     }
 
     .searchResult{
         color: #000;
+        :global{
+            .ant-table-thead {
+                tr{
+                    th{
+                        background-color:  rgb(235,246,255);
+                    }
+                }
+            }
+        }
     }
 }
