'添加编辑器和wangeditor3'

--- a/src/views/index/component/modal/style.less
+++ b/src/views/index/component/modal/style.less
@@ -90,3 +90,14 @@
         }
     }
 }
+
+
+:global{
+    .toolbar {
+        border: 1px solid #ccc;
+    }
+    .text {
+        border: 1px solid #ccc;
+        height: 400px;
+    }
+}
