--- a/src/views/index/component/modal/style.less
+++ b/src/views/index/component/modal/style.less
@@ -44,14 +44,6 @@
         }
     }
 }
-.insert{
-    margin-left: 25%;
-    color: #3196EB;
-    text-decoration: underline;
-    font-size: 14px;
-    width: 100px;
-    cursor: pointer;
-}
 .textContet{
     margin-bottom: 12px;
     p.waringP{
@@ -59,16 +51,10 @@
     }
     .editor{
         display: inline-block;
-        width: 70%;
-        min-height: 100px;
-        border: 1px solid #c7c7c7;
-        padding: 3px 8px;
-        outline: none;    
+        width: 60%;
+        height: 120px;
     }
     &.waring{
-        .editor{
-            border-color: #ff4d4f;
-        }
         p.waringP{
             display: block;
             padding-left: 25%;
@@ -82,6 +68,7 @@
         width: 25%;
         text-align: right;
         padding-right: 5px;
+        vertical-align: top;
         &::before{
             display: inline-block;
             margin-right: 4px;
