add antd table demo

--- a/src/views/demo/style.less
+++ b/src/views/demo/style.less
@@ -17,3 +17,21 @@
         background: yellow;
     }
 }
+
+// antd拖拽表格的样式
+:global{
+    .row-dragging {
+        background: #fafafa;
+        border: 1px solid #ccc;
+    }
+    
+    .row-dragging td {
+        padding: 16px;
+        visibility: hidden;
+    }
+    
+    .row-dragging .drag-visible {
+        visibility: visible;
+    }
+}
+
