--- a/src/views/demo/style.less
+++ b/src/views/demo/style.less
@@ -16,4 +16,23 @@
         width: 100%;
         background: yellow;
     }
+    .box{
+        width: 300px;
+        margin: 10px;
+        padding: 10px ;
+        background-color: #fff;
+        >div{
+            height: 35px;
+            background-color: aqua;
+        }
+        .isFirst{
+            border-top-right-radius: 10px;
+            border-top-left-radius: 10px;
+        }
+        .isLast{
+            border-bottom-right-radius: 10px;
+            border-bottom-left-radius: 10px;
+            margin-bottom: 10px;
+        }
+    }
 }
